--- a/views/home.html
+++ b/views/home.html
@@ -21,7 +21,7 @@ rel="stylesheet" />
             </div>
        </nav>
         <div class="search">
-            Lugar para poner barra de busqueda <i class="fas fa-search"></i>
+            <input type="text" placeholder="Buscar productos, marcas"><i class="fas fa-search"></i>
         </div>
         <div>
             <h3><i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjeta de credito</h3>
